--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 	<!-- end template -->
 
 	<!-- script references -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<script src="static/js/bootstrap.min.js"></script>
 	<script src="static/js/scripts.js"></script>
-	<script type="text/javascript" language="javascript" src="static/js/data.json}"></script>
+	<script type="text/javascript" language="javascript" src="static/js/data.json"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL-6b5jfho-AXqJnDWtugtjsSnimOWIFo&callback=initMap" async defer></script>
 </body>
 
